Le dimos estilos a la clase disableButton, deshabilita el boton de marcar tarea como realizada

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,3 +121,8 @@ body{
     background-color: #407c47;
     transition: .3s;
 }
+.disableButton {
+    background-color: #969696;
+    pointer-events: none; 
+    cursor: default;
+}
